--- a/test.mdx
+++ b/test.mdx
@@ -1,4 +1,5 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Page Title"
+sidebarTitle: "Sidebar title (optional - if different from page title)"
+description: "Subtitle (optional)"
 ---
