--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,9 +14,9 @@ description: 'Welcome to the Moongate Merchant guide'
   alt="Hero Dark"
 />
 
-## Setting up
+## About Us
 
-The first step to world-class documentation is setting up your editing environments.
+[Moongate](https://moongate.id) is an all-in-one solution for brands and event organizers to supercharge their community with NFT tickets and memberships that unlock exclusive experiences and benefits. We've built Moongate to make it easy for brands to:
 
 <CardGroup cols={2}>
   <Card
