--- a/introduction.mdx
+++ b/introduction.mdx
@@ -18,6 +18,12 @@ description: 'Welcome to the Moongate Merchant guide'
 
 [Moongate](https://moongate.id) is an all-in-one solution for brands and event organizers to supercharge their community with NFT tickets and memberships that unlock exclusive experiences and benefits. We've built Moongate to make it easy for brands to:
 
+- Create, issue, and validate tickets for their events
+- Create and administer membership programs
+- Create and administer benefit campaigns for their customers
+- Airdrop tickets and memberships to target users
+- View attendance, sales information, and customer analytics
+
 <CardGroup cols={2}>
   <Card
     title="Edit Your Docs"
