--- a/the basics.mdx
+++ b/the basics.mdx
@@ -4,86 +4,18 @@ description: 'A brief explanation of common web3 terms'
 ---
 We've taken great care to abstract away most of the complexities of Web3 on Moongate in order to make things easier to understand. In case you're curious though, we've explained some basic Web3 terms below for your reference. Please feel free to skip this section though – you truly don't need to know much about Web3 in order to get the most out of Moongate.
 
-<line>
+**Blockchain:** think of a blockchain as a very large public spreadsheet.
 
-## Setup your development
+**NFT:** think of an NFT as a cell in that very large public spreadsheet. That cell can be used to represent anything – pictures, videos, or in Moongate's case, tickets and memberships.
 
-Learn how to update your docs locally and and deploy them to the public.
+**Minting:** the act of allocating a space on the blockchain to an NFT. Continuing with the above metaphor, minting is declaring the value of a new cell within the public spreadsheet.
 
-### Edit and preview
+**Gas Fee:** the fee paid for making a transaction on the blockchain, including creating an NFT. Don't worry though, Moongate absorbs the gas fee for all campaigns created on our platform!
 
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
-  </Accordion>
-</AccordionGroup>
+**Wallet:** part of the information contained within an NFT is a link that lets others know who owns it. If NFTs are PO boxes, then wallets are the address associated with them.
 
-### Deploy your changes
+**Token-Gating/Whitelisting:** restricting the ability to own/purchase an NFT to a specific group of users, either via ownership of another specified NFT or other means (email, for instance.)
 
-<AccordionGroup>
+**Soulbound:** while a regular NFT can be traded between anybody with a crypto wallet, soulbound NFTs cannot be traded.
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
-
-</AccordionGroup>
-
-## Update your docs
-
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
-
-<CardGroup>
-
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
-</Card>
-
-<Card
-  title="Add API Endpoints"
-  icon="square-code"
-  href="/api-playground/configuration"
->
-  Implement your OpenAPI spec and enable API user interaction.
-</Card>
-
-<Card
-  title="Integrate Analytics"
-  icon="chart-mixed"
-  href="/analytics/supported-integrations"
->
-  Draw insights from user interactions with your documentation.
-</Card>
-
-<Card
-  title="Host on a Custom Domain"
-  icon="browser"
-  href="/settings/custom-domain/subdomain"
->
-  Keep your docs on your own website's subdomain.
-</Card>
-
-</CardGroup>
+**Airdrop:** distributing an NFT for free to a specified group of users.
