--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,6 +14,11 @@ description: 'Welcome to the Moongate Merchant guide'
   alt="Hero Dark"
 />
 
+<img
+  src="/images/banner.png"
+  alt="Moongate Banner"
+/>
+
 ## About Us
 
 [Moongate](https://moongate.id) is an all-in-one solution for brands and event organizers to supercharge their community with NFT tickets and memberships that unlock exclusive experiences and benefits. We've built Moongate to make it easy for brands to:
