--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -2,3 +2,27 @@
 title: 'Creating an Event'
 description: 'Description of your new file.'
 ---
+
+Before you can create and issue tickets, you must first create a corresponding event. 
+
+##Step 1: Sign into the Moongate Merchant Portal.##
+
+##Step 2: Navigate to the 'Event' Tab.##
+<img
+  src="/images/Creating Campaign/Ticketing/Event Sidebar Location.png"
+/>
+
+##Step 3: Click 'Create'##
+
+##Step 4:  Add basic information for your event##
+Enter the name of your event, starting & ending dates/times, address, etc.
+
+While you can edit most of this information even after your event goes live, your event's URL cannot be changed after publication. Be sure to double-check it before publication.
+When you are ready, scroll to the end of the page and click 'Next'.
+
+Tip: Clicking "Next" will save your work. You can also click "Save Draft" at any point to save your work and return to it later.
+
+#Step 5: Fill out the details of your event#
+Add a featured image, event banner, and description of your event, as well as links to relevant social media accounts.
+
+When you are ready, scroll to the end of the page and click 'Next'. You are now ready to create tickets!
