--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -8,9 +8,7 @@ Before you can create and issue tickets, you must first create a corresponding e
 ## Step 1: Sign into the Moongate Merchant Portal
 
 ## Step 2: Navigate to the 'Event' Tab
-<img height="300"
-  src="/images/Creating Campaign/Ticketing/Creating an Event/Event Sidebar Location.png"
-/>
+<img height="50" src="/images/Creating Campaign/Ticketing/Creating an Event/Event Sidebar Location.png"/>
 
 ## Step 3: Click 'Create
 
