--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -5,7 +5,7 @@ description: 'Description of your new file.'
 
 Before you can create and issue tickets, you must first create a corresponding event. 
 
-## Step 1: Sign into the Moongate Merchant Portal
+## Step 1: Sign into the Moongate Merchant Portall
 
 ## Step 2: Navigate to the 'Event' Tab
 <img src="/images/Creating Campaign/Ticketing/Creating an Event/Event Sidebar Location.png" width="109" height="211"/>
