--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -5,11 +5,12 @@ description: 'Description of your new file.'
 
 Before you can create and issue tickets, you must first create a corresponding event. 
 
-## Step 1: Sign into the Moongate Merchant Portalll
+## Step 1: Sign into the Moongate Merchant Portal
 
 ## Step 2: Navigate to the 'Event' Tab
+<img width="109" height="211" noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Event Sidebar Location.png"/>
 
-## Step 3: Click 'Create
+## Step 3: Click 'Create'
 
 ## Step 4:  Add basic information for your event
 Enter the name of your event, starting & ending dates/times, address, etc.
@@ -19,7 +20,7 @@ When you are ready, scroll to the end of the page and click 'Next'.
 
 Tip: Clicking "Next" will save your work. You can also click "Save Draft" at any point to save your work and return to it later.
 
-# Step 5: Fill out the details of your event
+## Step 5: Fill out the details of your event
 Add a featured image, event banner, and description of your event, as well as links to relevant social media accounts.
 
 When you are ready, scroll to the end of the page and click 'Next'. You are now ready to create tickets!
