--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -8,17 +8,27 @@ Before you can create and issue tickets, you must first create a corresponding e
 ## Step 1: Sign into the Moongate Merchant Portal
 
 ## Step 2: Navigate to the 'Event' Tab
-<img width="109" height="211" noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Event Sidebar Location.png"/>
+<img width="218" height="422" noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Event Sidebar Location.png"/>
 
 ## Step 3: Click 'Create'
+<img noZoom src="MoongateIntern/MoongateManuals/images/Creating Campaign/Ticketing/Creating an Event/Create Event Button Location.png"/>
 
 ## Step 4:  Add basic information for your event
 Enter the name of your event, starting & ending dates/times, address, etc.
+<img noZoom src="MoongateIntern/MoongateManuals/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Basic Info.png"/>
 
+<Warning>
 While you can edit most of this information even after your event goes live, your event's URL cannot be changed after publication. Be sure to double-check it before publication.
 When you are ready, scroll to the end of the page and click 'Next'.
+</Warning>
 
-Tip: Clicking "Next" will save your work. You can also click "Save Draft" at any point to save your work and return to it later.
+<Info>
+Info box
+</Info>
+
+<Note>
+    Tip: Clicking "Next" will save your work. You can also click "Save Draft" at any point to save your work and return to it later.  
+</Note>
 
 ## Step 5: Fill out the details of your event
 Add a featured image, event banner, and description of your event, as well as links to relevant social media accounts.
