--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -11,26 +11,69 @@ Before you can create and issue tickets, you must first create a corresponding e
 <img width="218" height="422" noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Event Sidebar Location.png"/>
 
 ## Step 3: Click 'Create'
-<img noZoom src="MoongateIntern/MoongateManuals/images/Creating Campaign/Ticketing/Creating an Event/Create Event Button Location.png"/>
+<img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Create Event Button Location.png"/>
 
 ## Step 4:  Add basic information for your event
 Enter the name of your event, starting & ending dates/times, address, etc.
-<img noZoom src="MoongateIntern/MoongateManuals/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Basic Info.png"/>
+<img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Basic Info.png"/>
 
 <Warning>
-While you can edit most of this information even after your event goes live, your event's URL cannot be changed after publication. Be sure to double-check it before publication.
-When you are ready, scroll to the end of the page and click 'Next'.
+While you can edit most of this information even after your event goes live,
+your event's URL **cannot be changed after publication.** Be sure to double-check it
+before publication.
 </Warning>
 
-<Info>
-Info box
-</Info>
+When you are ready, scroll to the end of the page and click 'Next'.
 
-<Note>
-    Tip: Clicking "Next" will save your work. You can also click "Save Draft" at any point to save your work and return to it later.  
-</Note>
+<Info>
+Tip: Clicking "Next" will save your work. You can also click "Save Draft" at any point
+to save your work and return to it later.  
+</Info>
 
 ## Step 5: Fill out the details of your event
 Add a featured image, event banner, and description of your event, as well as links to relevant social media accounts.
+<img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Details.png"/>
+
+<Tabs>
+  <Tab title="First Tab">
+    ☝️ Welcome to the content that you can only see inside the first Tab.
+  </Tab>
+  <Tab title="Second Tab">
+    ✌️ Here's content that's only inside the second Tab.
+  </Tab>
+  <Tab title="Third Tab">
+    💪 Here's content that's only inside the third Tab.
+  </Tab>
+</Tabs>
+
+<Steps>
+  <Step title="Sign into the Moongate Merchant Portal">
+  </Step>
+  <Step title="Navigate to the 'Event' Tab">
+    <img width="218" height="422" noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Event Sidebar Location.png"/>
+  </Step>
+  <Step title="Click 'Create'">
+    <img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Create Event Button Location.png"/>
+  </Step>
+  <Step title="Add basic information for your event">
+    Enter the name of your event, starting & ending dates/times, address, etc.
+    <img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Basic Info.png"/>
+  </Step>
+  <Step title="Fill out the details of your event">
+    Add a featured image, event banner, and description of your event, as well as links to relevant social media accounts.
+    <img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Details.png"/>
+    <Tabs>
+        <Tab title="First Tab">
+            ☝️ Welcome to the content that you can only see inside the first Tab.
+        </Tab>
+        <Tab title="Second Tab">
+            ✌️ Here's content that's only inside the second Tab.
+        </Tab>
+        <Tab title="Third Tab">
+            💪 Here's content that's only inside the third Tab.
+        </Tab>
+    </Tabs>
+  </Step>
+</Steps>
 
 When you are ready, scroll to the end of the page and click 'Next'. You are now ready to create tickets!
