Create Event final

--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -5,47 +5,6 @@ description: 'Description of your new file.'
 
 Before you can create and issue tickets, you must first create a corresponding event. 
 
-## Step 1: Sign into the Moongate Merchant Portal
-
-## Step 2: Navigate to the 'Event' Tab
-<img width="218" height="422" noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Event Sidebar Location.png"/>
-
-## Step 3: Click 'Create'
-<img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Create Event Button Location.png"/>
-
-## Step 4:  Add basic information for your event
-Enter the name of your event, starting & ending dates/times, address, etc.
-<img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Basic Info.png"/>
-
-<Warning>
-While you can edit most of this information even after your event goes live,
-your event's URL **cannot be changed after publication.** Be sure to double-check it
-before publication.
-</Warning>
-
-When you are ready, scroll to the end of the page and click 'Next'.
-
-<Info>
-Tip: Clicking "Next" will save your work. You can also click "Save Draft" at any point
-to save your work and return to it later.  
-</Info>
-
-## Step 5: Fill out the details of your event
-Add a featured image, event banner, and description of your event, as well as links to relevant social media accounts.
-<img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Details.png"/>
-
-<Tabs>
-  <Tab title="First Tab">
-    ☝️ Welcome to the content that you can only see inside the first Tab.
-  </Tab>
-  <Tab title="Second Tab">
-    ✌️ Here's content that's only inside the second Tab.
-  </Tab>
-  <Tab title="Third Tab">
-    💪 Here's content that's only inside the third Tab.
-  </Tab>
-</Tabs>
-
 <Steps>
   <Step title="Sign into the Moongate Merchant Portal">
   </Step>
@@ -58,19 +17,32 @@ Add a featured image, event banner, and description of your event, as well as li
   <Step title="Add basic information for your event">
     Enter the name of your event, starting & ending dates/times, address, etc.
     <img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Basic Info.png"/>
+    <Warning>
+        While you can edit most of this information even after your event goes live,
+        your event's URL **cannot be changed after publication.** Be sure to double-check it
+        before publication.
+    </Warning>
+    When you are ready, scroll to the end of the page and click 'Next'.
+    <Info>
+        Tip: Clicking "Next" will save your work. You can also click "Save Draft" at any point
+        to save your work and return to it later.  
+    </Info>
   </Step>
   <Step title="Fill out the details of your event">
     Add a featured image, event banner, and description of your event, as well as links to relevant social media accounts.
     <img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Details.png"/>
     <Tabs>
-        <Tab title="First Tab">
-            ☝️ Welcome to the content that you can only see inside the first Tab.
+        <Tab title="Featured Image">
+            <img src="/images/Creating Campaign/Ticketing/Creating an Event/Featured Image Location.png"/>
         </Tab>
-        <Tab title="Second Tab">
-            ✌️ Here's content that's only inside the second Tab.
+        <Tab title="Event Banner">
+            <img src="/images/Creating Campaign/Ticketing/Creating an Event/Event Banner Location.png"/>
         </Tab>
-        <Tab title="Third Tab">
-            💪 Here's content that's only inside the third Tab.
+        <Tab title="Event Description">
+            <img src="/images/Creating Campaign/Ticketing/Creating an Event/Event Description Location.png"/>
+        </Tab>
+        <Tab title="Socials/Website Links">
+            <img src="/images/Creating Campaign/Ticketing/Creating an Event/Socials Location.png"/>
         </Tab>
     </Tabs>
   </Step>
