--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'Creating an Event'
+description: 'A brief explanation of common web3 terms'
 ---
 
 Before you can create and issue tickets, you must first create a corresponding event. 
