--- a/creating campaign/ticketing/createtickets.mdx
+++ b/creating campaign/ticketing/createtickets.mdx
@@ -4,3 +4,61 @@ title: 'Creating Tickets'
 
 Once you have created a corresponding event, you are now ready to create and issue tickets.
 
+<Steps>
+  <Step title="Sign into the Moongate Merchant Portal">
+  </Step>
+  <Step title="Click "③ Tickets"">
+    <img src="/images/Creating Campaign/Ticketing/Creating Tickets/3 Tix Location.png"/>
+  </Step>
+  <Step title="Click "Add Ticket"">
+    <img src="/images/Creating Campaign/Ticketing/Creating Tickets/Add Tix Button Location.png"/>
+  </Step>
+  <Step title="Add Ticket Name/Tier">
+    Enter the name or category (GA, VIP, Concession, etc) for this ticket type. Additional ticket types can always be added later.
+    <img src="/images/Creating Campaign/Ticketing/Creating Tickets/Tix Name Field.png"/>
+    <Warning>
+        Please note that future updates made to the "Ticket Name" field may not automatically appear on NFT 
+        marketplaces for NFTs that have already been minted. To ensure the latest metadata is displayed, 
+        manually refresh the NFT metadata on the respective marketplaces.
+    </Warning>
+    <Frame caption="Where customers will see the different ticket types">
+        <img src="images/Creating Campaign/Ticketing/Creating Tickets/Tix Type Location.png"/>
+    </Frame>
+  </Step>
+  <Step title="Add Ticket Image and Description">
+    Upload an image and a brief description for this ticket type.
+    <img src="images/Creating Campaign/Ticketing/Creating Tickets/Add Tix Img and Desc.png"/>
+    <Warning>
+        Please note that future updates made to ticket images may not automatically appear on NFT 
+        marketplaces for NFTs that have already been minted. To ensure the latest metadata is displayed,
+        manually refresh the NFT metadata on the respective marketplaces.
+    </Warning>
+    <Tabs>
+        <Tab title="Ticket Description">
+            <Frame caption="Where customers will see the ticket description during checkout">
+                <img src="images/Creating Campaign/Ticketing/Creating Tickets/Tix Desc Location.png"/>
+            </Frame>
+        </Tab>
+        <Tab title="Ticket Image">
+            <Frame caption="Where customers will see the ticket image when checking out">
+                <img src="/images/Creating Campaign/Ticketing/Creating Tickets/Tix Img Checkout.png"/>
+            </Frame>
+
+            <Frame caption="Where customers will see the ticket image in the email confirmation message">
+                <img src="/images/Creating Campaign/Ticketing/Creating Tickets/Tix Img Email.png"/>
+            </Frame>
+        </Tab>
+    </Tabs>
+  </Step>
+  <Step title="Specify Ticket Price and Sales Period">
+    Enter the desired price for this ticket type, as well as when sales of this ticket type will begin and end.
+    <img src="/images/Creating Campaign/Ticketing/Creating Tickets/Tix Price Sales Period.png"/>
+    <Info>
+        Set the price to 0 for free tickets.
+    </Info>
+    <Info>
+        To change the currency type, return to "① Info" in the sidebar and change the value in the "Currency" field.
+    </Info>
+  </Step>
+  
+</Steps>
