--- a/creating campaign/ticketing/createtickets.mdx
+++ b/creating campaign/ticketing/createtickets.mdx
@@ -7,10 +7,10 @@ Once you have created a corresponding event, you are now ready to create and iss
 <Steps>
   <Step title="Sign into the Moongate Merchant Portal">
   </Step>
-  <Step title="Click "③ Tickets"">
+  <Step title="Click ③ Tickets">
     <img src="/images/Creating Campaign/Ticketing/Creating Tickets/3 Tix Location.png"/>
   </Step>
-  <Step title="Click "Add Ticket"">
+  <Step title="Click Add Ticket">
     <img src="/images/Creating Campaign/Ticketing/Creating Tickets/Add Tix Button Location.png"/>
   </Step>
 </Steps>
