--- a/creating campaign/ticketing/createtickets.mdx
+++ b/creating campaign/ticketing/createtickets.mdx
@@ -22,12 +22,12 @@ Once you have created a corresponding event, you are now ready to create and iss
         manually refresh the NFT metadata on the respective marketplaces.
     </Warning>
     <Frame caption="Where customers will see the different ticket types">
-        <img src="images/Creating Campaign/Ticketing/Creating Tickets/Tix Type Location.png"/>
+        <img src="/images/Creating Campaign/Ticketing/Creating Tickets/Tix Type Location.png"/>
     </Frame>
   </Step>
   <Step title="Add Ticket Image and Description">
     Upload an image and a brief description for this ticket type.
-    <img src="images/Creating Campaign/Ticketing/Creating Tickets/Add Tix Img and Desc.png"/>
+    <img src="/images/Creating Campaign/Ticketing/Creating Tickets/Add Tix Img and Desc.png"/>
     <Warning>
         Please note that future updates made to ticket images may not automatically appear on NFT 
         marketplaces for NFTs that have already been minted. To ensure the latest metadata is displayed,
@@ -36,7 +36,7 @@ Once you have created a corresponding event, you are now ready to create and iss
     <Tabs>
         <Tab title="Ticket Description">
             <Frame caption="Where customers will see the ticket description during checkout">
-                <img src="images/Creating Campaign/Ticketing/Creating Tickets/Tix Desc Location.png"/>
+                <img src="/images/Creating Campaign/Ticketing/Creating Tickets/Tix Desc Location.png"/>
             </Frame>
         </Tab>
         <Tab title="Ticket Image">
