--- a/creating campaign/ticketing/gating.mdx
+++ b/creating campaign/ticketing/gating.mdx
@@ -1,4 +1,45 @@
 ---
 title: 'Gating by NFT/Email/Wallet'
-description: 'Description of your new file.'
+description: 'Limit ticket access to a group of specified users'
 ---
+
+By gating a ticket type, vendors can restrict the ability to purchase it to specified people only, allowing vendors to offer exclusive value to users. 
+
+Ticket purchase eligibility can be allocated by ownership of certain NFT collections and email/NFT wallet addresses. **Please note that gating is an optional feature and does not need to be enabled should your application not require it.**
+
+<AccordionGroup>
+  <Accordion title="Gating by NFT">
+    <Steps>
+        <Step title="Enable NFT-gating">
+        Navigate to the "Advance" section for the ticket type to be gated and enable "Gated by NFT."
+        </Step>
+        <Step title="Decide NFT Collection to Gate By">
+            If you have hosted an event that was ticketed by or created a membership program on Moongate, we have made it easy for you to NFT-gate by your events and membership tiers. Simply select "Your Collection" from the "Type" field.
+            <Accordion title="Your Collection">
+                <Steps>
+                    <Step title="Select the target event/membership program from the "NFT Collection" field.">
+                    </Step>
+                    <Step title="Select the target ticket/membership tier from the "Type" field. ">
+                    </Step>
+                </Steps>
+            </Accordion>
+            <Accordion title="Other Collection">
+                <Steps>
+                    <Step title="Select the network on which the target NFT collection is hosted.">
+                    </Step>
+                    <Step title="Enter the NFT collections' contract address.">
+                    </Step>
+                </Steps>
+            </Accordion>
+        </Step>
+    </Steps>
+  </Accordion>
+  <Accordion title="Gating by Email/Wallet (Whitelisting)">
+    <Steps>
+        <Step title="Enable Email/Wallet-gating">
+        </Step>
+        <Step title="Choose a Whitelisting Method">
+        </Step>
+    </Steps>
+  </Accordion>
+</AccordionGroup>
