--- a/creating campaign/ticketing/gating.mdx
+++ b/creating campaign/ticketing/gating.mdx
@@ -17,9 +17,9 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
             If you have hosted an event that was ticketed by or created a membership program on Moongate, we have made it easy for you to NFT-gate by your events and membership tiers. Simply select "Your Collection" from the "Type" field.
             <Accordion title="Your Collection">
                 <Steps>
-                    <Step title="Select the target event/membership program from the "NFT Collection" field.">
+                    <Step title="Select the target event/membership program from the 'NFT Collection' field.">
                     </Step>
-                    <Step title="Select the target ticket/membership tier from the "Type" field. ">
+                    <Step title="Select the target ticket/membership tier from the 'Type' field.">
                     </Step>
                 </Steps>
             </Accordion>
