--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -22,10 +22,10 @@ Before you can create and issue tickets, you must first create a corresponding e
         before publication.
     </Warning>
     When you are ready, scroll to the end of the page and click 'Next'.
-    <Info>
+    <Tip>
         Tip: Clicking "Next" will save your work. You can also click "Save Draft" at any point
         to save your work and return to it later.  
-    </Info>
+    </Tip>
   </Step>
   <Step title="Fill out the details of your event">
     Add a featured image, event banner, and description of your event, as well as links to relevant social media accounts.
