--- a/creating campaign/ticketing/createtickets.mdx
+++ b/creating campaign/ticketing/createtickets.mdx
@@ -53,12 +53,12 @@ Once you have created a corresponding event, you are now ready to create and iss
   <Step title="Specify Ticket Price and Sales Period">
     Enter the desired price for this ticket type, as well as when sales of this ticket type will begin and end.
     <img src="/images/Creating Campaign/Ticketing/Creating Tickets/Tix Price Sales Period.png"/>
-    <Info>
+    <Tip>
         Set the price to 0 for free tickets.
-    </Info>
-    <Info>
+    </Tip>
+    <Tip>
         To change the currency type, return to "① Info" in the sidebar and change the value in the "Currency" field.
-    </Info>
+    </Tip>
   </Step>
   <Step title="Specify Advanced Options (Optional)">
     If applicable, specify the maximum number of available tickets of this ticket type, as well as whether the 
