--- a/creating campaign/ticketing/gating.mdx
+++ b/creating campaign/ticketing/gating.mdx
@@ -11,19 +11,26 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
   <Accordion title="Gating by NFT">
     <Steps>
         <Step title="Enable NFT-gating">
-        Navigate to the "Advance" section for the ticket type to be gated and enable "Gated by NFT."
+            Navigate to the "Advance" section for the ticket type to be gated and enable "Gated by NFT."
+            <img src="/images/Creating Campaign/Ticketing/Gating/NFT Gate Toggle.png"/>
         </Step>
-        <Step title="Decide NFT Collection to Gate By">
+        <Step title="Select NFT Collection to Gate By">
             If you have hosted an event that was ticketed by or created a membership program on Moongate, we have made it easy for you to NFT-gate by your events and membership tiers. Simply select "Your Collection" from the "Type" field.
+            <img src="/images/Creating Campaign/Ticketing/Gating/Your Collection Toggle.png"/>
             <Accordion title="Your Collection">
+                <img src="/images/Creating Campaign/Ticketing/Gating/NFT Gate Toggle.png"/>
                 <Steps>
                     <Step title="Select the target event/membership program from the 'NFT Collection' field.">
                     </Step>
                     <Step title="Select the target ticket/membership tier from the 'Type' field.">
+                        Select "All Tier" if you do not want to gate by ticket/membership tier (i.e ticket will be available to holders of a ticket of any type from the specified event/membership of any tier from the specified membership program.)
                     </Step>
                 </Steps>
             </Accordion>
+            If you are gating by an external NFT collection, select "Other Collection."
+            <img src="/images/Creating Campaign/Ticketing/Gating/Other Collection Toggle.png"/>
             <Accordion title="Other Collection">
+                <img src="/images/Creating Campaign/Ticketing/Gating/Select Network.gif"/>
                 <Steps>
                     <Step title="Select the network on which the target NFT collection is hosted.">
                     </Step>
@@ -37,8 +44,43 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
   <Accordion title="Gating by Email/Wallet (Whitelisting)">
     <Steps>
         <Step title="Enable Email/Wallet-gating">
+            Navigate to the "Advance" section for the ticket type to be gated and enable "Gated by Email/Wallet."
+            <img src="/images/Creating Campaign/Ticketing/Gating/Email or Wallet Toggle.png"/>
         </Step>
         <Step title="Choose a Whitelisting Method">
+            Select CSV if there are a large number of people that you will be gating this ticket type to, and manual for a smaller quantity.
+            <Tip>
+                You can always add additional addresses for gating later using either method.
+            </Tip>
+            <img src="/images/Creating Campaign/Ticketing/Gating/CSV Gate.png"/>
+            <Accordion title="CSV (bulk import)">
+                <Steps>
+                    <Step title="Download the CSV template">
+                        <img src="/images/Creating Campaign/Ticketing/Gating/Download CSV Template.png"/>
+                    </Step>
+                    <Step title="Add Addresses to the CSV Template">
+                        Open the template in a spreadsheet editor. Following the template format, input the target email and wallet addresses. You can mix email and wallet addresses concurrently.
+                    </Step>
+                    <Step title="Upload the CSV">
+                        Upload the edited CSV file and save.
+                        <img src="/images/Creating Campaign/Ticketing/Gating/Whitelist Upload.png"/>
+                    </Step>
+                    <Step title="Confirm Successful Import">
+                        Return to the Tickets page, locate the gated ticket type, and click the number in the "Gated by" column to confirm the addresses.
+                        <img src="/images/Creating Campaign/Ticketing/Gating/Whitelist Confirmation 1.png"/>
+                        <img src="/images/Creating Campaign/Ticketing/Gating/Whitelist Confirmation 2.png"/>
+                    </Step>
+                </Steps>
+            </Accordion>
+            <img src="/images/Creating Campaign/Ticketing/Gating/Manual Gate.png"/>
+            <Accordion title="Manual">
+                <Steps>
+                    <Step title="Click \"Add Whitelist\" and input an email/wallet address">
+                    </Step>
+                    <Step title="">
+                    </Step>            
+                </Steps>
+            </Accordion>
         </Step>
     </Steps>
   </Accordion>
