--- a/creating campaign/ticketing/gating.mdx
+++ b/creating campaign/ticketing/gating.mdx
@@ -75,9 +75,9 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
             <img src="/images/Creating Campaign/Ticketing/Gating/Manual Gate.png"/>
             <Accordion title="Manual">
                 <Steps>
-                    <Step title="Click 'Add Whitelist' and input an email/wallet address">
+                    <Step title="Click \"Add Whitelist\" and input an email/wallet address">
                     </Step>
-                    <Step title="">
+                    <Step title="a">
                     </Step>            
                 </Steps>
             </Accordion>
