--- a/creating campaign/ticketing/gating.mdx
+++ b/creating campaign/ticketing/gating.mdx
@@ -75,10 +75,15 @@ Ticket purchase eligibility can be allocated by ownership of certain NFT collect
             <img src="/images/Creating Campaign/Ticketing/Gating/Manual Gate.png"/>
             <Accordion title="Manual">
                 <Steps>
-                    <Step title="Click \"Add Whitelist\" and input an email/wallet address">
+                    <Step title="Click 'Add Whitelist' and input an email/wallet address">
+                        Repeat as appropriate for additional addresses and save when complete.
+                        <img src="/images/Creating Campaign/Ticketing/Gating/Manual Flow.gif"/>
                     </Step>
-                    <Step title="a">
-                    </Step>            
+                    <Step title="Confirm Successful Import">
+                        Return to the Tickets page, locate the gated ticket type, and click the number in the "Gated by" column to confirm the addresses.
+                        <img src="/images/Creating Campaign/Ticketing/Gating/Whitelist Confirmation 1.png"/>
+                        <img src="/images/Creating Campaign/Ticketing/Gating/Whitelist Confirmation 2.png"/>
+                    </Step>
                 </Steps>
             </Accordion>
         </Step>
