--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -8,14 +8,14 @@ Before you can create and issue tickets, you must first create a corresponding e
   <Step title="Sign into the Moongate Merchant Portal">
   </Step>
   <Step title="Navigate to the 'Event' Tab">
-    <img width="218" height="422" noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Event Sidebar Location.png"/>
+    <img width="218" height="422" noZoom src="/images/creating campaign/ticketing/creating an event/Event Sidebar Location.png"/>
   </Step>
   <Step title="Click 'Create'">
-    <img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Create Event Button Location.png"/>
+    <img noZoom src="/images/creating campaign/ticketing/creating an event/Create Event Button Location.png"/>
   </Step>
   <Step title="Add basic information for your event">
     Enter the name of your event, starting & ending dates/times, address, etc.
-    <img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Basic Info.png"/>
+    <img noZoom src="/images/creating campaign/ticketing/creating an event/Fill Event Basic Info.png"/>
     <Warning>
         While you can edit most of this information even after your event goes live,
         your event's URL **cannot be changed after publication.** Be sure to double-check it
@@ -29,19 +29,19 @@ Before you can create and issue tickets, you must first create a corresponding e
   </Step>
   <Step title="Fill out the details of your event">
     Add a featured image, event banner, and description of your event, as well as links to relevant social media accounts.
-    <img noZoom src="/images/Creating Campaign/Ticketing/Creating an Event/Fill Event Details.png"/>
+    <img noZoom src="/images/creating campaign/ticketing/creating an event/Fill Event Details.png"/>
     <Tabs>
         <Tab title="Featured Image">
-            <img src="/images/Creating Campaign/Ticketing/Creating an Event/Featured Image Location.png"/>
+            <img src="/images/creating campaign/ticketing/creating an event/Featured Image Location.png"/>
         </Tab>
         <Tab title="Event Banner">
-            <img src="/images/Creating Campaign/Ticketing/Creating an Event/Event Banner Location.png"/>
+            <img src="/images/creating campaign/ticketing/creating an event/Event Banner Location.png"/>
         </Tab>
         <Tab title="Event Description">
-            <img src="/images/Creating Campaign/Ticketing/Creating an Event/Event Description Location.png"/>
+            <img src="/images/creating campaign/ticketing/creating an event/Event Description Location.png"/>
         </Tab>
         <Tab title="Socials/Website Links">
-            <img src="/images/Creating Campaign/Ticketing/Creating an Event/Socials Location.png"/>
+            <img src="/images/creating campaign/ticketing/creating an event/Socials Location.png"/>
         </Tab>
     </Tabs>
         When you are ready, scroll to the end of the page and click 'Next'. You are now ready to create tickets!
