--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,7 +3,7 @@ title: 'Quick Start'
 ---
 We've linked some key sections of our merchant user guide below for your convenience.
 
-- [Creating an Event]()
+- [Creating an Event](creating campaign/ticketing/createevent.mdx)
 - [Creating a Membership Campaign]()
 - [Creating a Benefit Campaign]()
 - [Ticket Validation/User Check-in Guide]()
