--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -5,9 +5,9 @@ title: 'Creating an Event'
 Before you can create and issue tickets, you must first create a corresponding event. 
 
 <Steps>
-  <Step title="Sign into the Moongate Merchant Portal">
+  <Step title="Sign into the [Moongate Merchant Portal](https://portal.moongate.id/)">
   </Step>
-  <Step title="Navigate to the 'Event' Tab">
+  <Step title="Navigate to the ['Event'](https://portal.moongate.id/events) Tab">
     <img width="218" height="422" noZoom src="/images/creating campaign/ticketing/creating an event/Event Sidebar Location.png"/>
   </Step>
   <Step title="Click 'Create'">
@@ -44,6 +44,6 @@ Before you can create and issue tickets, you must first create a corresponding e
             <img src="/images/creating campaign/ticketing/creating an event/Socials Location.png"/>
         </Tab>
     </Tabs>
-        When you are ready, scroll to the end of the page and click 'Next'. You are now ready to create tickets!
+        When you are ready, scroll to the end of the page and click 'Next'. You are now ready to [create tickets](createtickets.mdx)!
   </Step>
 </Steps>
