Skeleton for "Creating Membership Program" page

--- a/creating campaign/ticketing/createevent.mdx
+++ b/creating campaign/ticketing/createevent.mdx
@@ -5,17 +5,19 @@ title: 'Creating an Event'
 Before you can create and issue tickets, you must first create a corresponding event. 
 
 <Steps>
-  <Step title="Sign into the [Moongate Merchant Portal](https://portal.moongate.id/)">
+  <Step title="Sign into the Moongate Merchant Portal">
+    [https://portal.moongate.id/](https://portal.moongate.id/)
   </Step>
-  <Step title="Navigate to the ['Event'](https://portal.moongate.id/events) Tab">
-    <img width="218" height="422" noZoom src="/images/creating campaign/ticketing/creating an event/Event Sidebar Location.png"/>
+  <Step title="Navigate to the 'Event' Tab">
+    <img width="218" height="422" src="/images/creating campaign/ticketing/creating an event/Event Sidebar Location.png"/>
+    [https://portal.moongate.id/events](https://portal.moongate.id/events)
   </Step>
   <Step title="Click 'Create'">
-    <img noZoom src="/images/creating campaign/ticketing/creating an event/Create Event Button Location.png"/>
+    <img src="/images/creating campaign/ticketing/creating an event/Create Event Button Location.png"/>
   </Step>
   <Step title="Add basic information for your event">
     Enter the name of your event, starting & ending dates/times, address, etc.
-    <img noZoom src="/images/creating campaign/ticketing/creating an event/Fill Event Basic Info.png"/>
+    <img src="/images/creating campaign/ticketing/creating an event/Fill Event Basic Info.png"/>
     <Warning>
         While you can edit most of this information even after your event goes live,
         your event's URL **cannot be changed after publication.** Be sure to double-check it
@@ -29,7 +31,7 @@ Before you can create and issue tickets, you must first create a corresponding e
   </Step>
   <Step title="Fill out the details of your event">
     Add a featured image, event banner, and description of your event, as well as links to relevant social media accounts.
-    <img noZoom src="/images/creating campaign/ticketing/creating an event/Fill Event Details.png"/>
+    <img src="/images/creating campaign/ticketing/creating an event/Fill Event Details.png"/>
     <Tabs>
         <Tab title="Featured Image">
             <img src="/images/creating campaign/ticketing/creating an event/Featured Image Location.png"/>
