--- a/creating campaign/membership/creatememprogram.mdx
+++ b/creating campaign/membership/creatememprogram.mdx
@@ -2,14 +2,37 @@
 title: 'Creating a Membership Program'
 ---
 <Steps>
-    <Step title="Sign into the ">
+    <Step title="Sign into the Moongate Merchant Portal.">
+        [https://portal.moongate.id/](https://portal.moongate.id/)
     </Step>
-    <Step title="">
+    <Step title="Navigate to the 'Memberships' Tab.">
+        [https://portal.moongate.id/events](https://portal.moongate.id/memberships)
     </Step>
-    <Step title="">
+    <Step title="Click 'Create'">
     </Step>
-    <Step title="">
+    <Step title="Add Basic Membership Program Information">
+        Enter the title of the membership program, the URL, currency used to purchase membership, and information about your brand.
+        <Warning>
+            While you can edit most of this information even after the program is activated, your program's **URL cannot be changed after activation**. Be sure to double-check it before activation.
+        </Warning>
+        When you are ready, scroll to the end of the page and click 'Next'.
+        <Tip>
+            Clicking "Next" will save your work. You can also click "Save Draft" at any point to save your work and return to it later.
+        </Tip>
     </Step>
-    <Step title="">
+    <Step title="Add Membership Program Images, Description, and Links">
+        Add a featured image, banner, and description of your membership program, as well as links to relevant social media accounts.
+        <Tabs>
+            <Tab title="Featured Image">
+                
+            </Tab>
+            <Tab title="Membership Program Descriptor">
+                
+            </Tab>
+            <Tab title="Socials/Website Links">
+                
+            </Tab>
+        </Tabs>
+        When you are ready, scroll to the end of the page and click 'Next'. You are now ready to [implement tiering within your membership program](/creating campaign/membership/creatememtier)!
     </Step>
 </Steps>
