--- a/creating-campaign/membership/creatememprogram.mdx
+++ b/creating-campaign/membership/creatememprogram.mdx
@@ -33,6 +33,6 @@ title: 'Creating a Membership Program'
                 
             </Tab>
         </Tabs>
-        When you are ready, scroll to the end of the page and click 'Next'. You are now ready to [implement tiering within your membership program](/creating campaign/membership/creatememtier)!
+        When you are ready, scroll to the end of the page and click 'Next'. You are now ready to [implement tiering within your membership program](/creating-campaign/membership/creatememtier)!
     </Step>
 </Steps>
