--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -6,26 +6,26 @@ Once you have created a corresponding event, you are now ready to create and iss
 
 <Steps>
   <Step title="Click '③ Tickets'">
-    <img src="/images/creating campaign/ticketing/creating tickets/3 Tix Location.png"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/3 Tix Location.png"/>
   </Step>
   <Step title="Click 'Add Ticket'">
-    <img src="/images/creating campaign/ticketing/creating tickets/Add Tix Button Location.png"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Add Tix Button Location.png"/>
   </Step>
   <Step title="Add Ticket Name/Tier">
     Enter the name or category (GA, VIP, Concession, etc) for this ticket type. Additional ticket types can always be added later.
-    <img src="/images/creating campaign/ticketing/creating tickets/Tix Name Field.png"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Tix Name Field.png"/>
     <Warning>
         Please note that future updates made to the "Ticket Name" field may not automatically appear on NFT 
         marketplaces for NFTs that have already been minted. To ensure the latest metadata is displayed, 
         manually refresh the NFT metadata on the respective marketplaces.
     </Warning>
     <Frame caption="Where customers will see the different ticket types">
-        <img src="/images/creating campaign/ticketing/creating tickets/Tix Type Location.png"/>
+        <img src="/images/creating-campaign/ticketing/creating tickets/Tix Type Location.png"/>
     </Frame>
   </Step>
   <Step title="Add Ticket Image and Description">
     Upload an image and a brief description for this ticket type.
-    <img src="/images/creating campaign/ticketing/creating tickets/Add Tix Img and Desc.png"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Add Tix Img and Desc.png"/>
     <Warning>
         Please note that future updates made to ticket images may not automatically appear on NFT 
         marketplaces for NFTs that have already been minted. To ensure the latest metadata is displayed,
@@ -34,23 +34,23 @@ Once you have created a corresponding event, you are now ready to create and iss
     <Tabs>
         <Tab title="Ticket Description">
             <Frame caption="Where customers will see the ticket description during checkout">
-                <img src="/images/creating campaign/ticketing/creating tickets/Tix Desc Location.png"/>
+                <img src="/images/creating-campaign/ticketing/creating tickets/Tix Desc Location.png"/>
             </Frame>
         </Tab>
         <Tab title="Ticket Image">
             <Frame caption="Where customers will see the ticket image when checking out">
-                <img src="/images/creating campaign/ticketing/creating tickets/Tix Img Checkout.png"/>
+                <img src="/images/creating-campaign/ticketing/creating tickets/Tix Img Checkout.png"/>
             </Frame>
 
             <Frame caption="Where customers will see the ticket image in the email confirmation message">
-                <img src="/images/creating campaign/ticketing/creating tickets/Tix Img Email.png"/>
+                <img src="/images/creating-campaign/ticketing/creating tickets/Tix Img Email.png"/>
             </Frame>
         </Tab>
     </Tabs>
   </Step>
   <Step title="Specify Ticket Price and Sales Period">
     Enter the desired price for this ticket type, as well as when sales of this ticket type will begin and end.
-    <img src="/images/creating campaign/ticketing/creating tickets/Tix Price Sales Period.png"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Tix Price Sales Period.png"/>
     <Tip>
         Set the price to 0 for free tickets.
     </Tip>
@@ -61,37 +61,37 @@ Once you have created a corresponding event, you are now ready to create and iss
   <Step title="Specify Advanced Options (Optional)">
     If applicable, specify the maximum number of available tickets of this ticket type, as well as whether the 
     ticket type should be invisible to users on the event page.
-    <img src= "/images/creating campaign/ticketing/creating tickets/Tix Price Sales Period.png"/>
+    <img src= "/images/creating-campaign/ticketing/creating tickets/Tix Price Sales Period.png"/>
     <Info>
         To gate tickets by NFT ownership or Email/Wallet addresses, please refer to this guide.
     </Info>
     When you are ready, click "Save" to close the ticket details window, then click "Next."
   </Step>
   <Step title="Add Questions (Optional)">
-    <img src="/images/creating campaign/ticketing/creating tickets/Add Qs.gif"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Add Qs.gif"/>
     If applicable, add questions to collect information from users who are purchasing tickets. These questions 
     will be shown to users during checkout.
-    <img src="/images/creating campaign/ticketing/creating tickets/Qs.png"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Qs.png"/>
     Responses can be viewed from the event's Sales tab, located in the event dashboard.
-    <img src="/images/creating campaign/ticketing/creating tickets/Reponses.gif"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Reponses.gif"/>
   </Step>
   <Step title="Specify Contract Settings and Payment Options">
     Choose a collection name and symbol for **all ticket types associated with your event.** The collection name will be used as the collection title when tickets are listed on marketplaces.
-    <img src="/images/creating campaign/ticketing/creating tickets/Contract Blank.png"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Contract Blank.png"/>
     <Warning>
         Collection name and symbol cannot be changed after your event is published.
     </Warning>
-    <img src="/images/creating campaign/ticketing/creating tickets/Collection Name OS Location.png"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Collection Name OS Location.png"/>
     Select a blockchain to mint your event and tickets on, as well as a contract type.
-    <img src="/images/creating campaign/ticketing/creating tickets/Contract Filled.png"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Contract Filled.png"/>
     <Info>
         For more information on selecting a blockchain and contract type, please consult section "7. Technical Information."
     </Info>
     Select a payment option if applicable. Moongate supports both credit cards and crypto options. **Please contact us if you will be collecting payment for your event.**
-    <img src="/images/creating campaign/ticketing/creating tickets/Payment Options.png"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Payment Options.png"/>
   </Step>
   <Step title="Publish Your Event">
     Once you have finalized your event and ticket details, click "Publish" to launch your event.
-    <img src="/images/creating campaign/ticketing/creating tickets/Publish Button Location.png"/>
+    <img src="/images/creating-campaign/ticketing/creating tickets/Publish Button Location.png"/>
   </Step>
 </Steps>
