--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,8 +3,8 @@ title: 'Quick Start'
 ---
 We've linked some key sections of our merchant user guide below for your convenience.
 
-- [Creating an Event](/creating campaign/ticketing/createevent)
-- [Creating a Membership Campaign](/creating campaign/membership/creatememprogram)
+- [Creating an Event](/creating-campaign/ticketing/createevent)
+- [Creating a Membership Campaign](/creating-campaign/membership/creatememprogram)
 - [Creating a Benefit Campaign]()
 - [Ticket Validation/User Check-in Guide]()
 - [Implementing Discounts and Promo Codes]()
