--- a/creating-campaign/membership/creatememprogram.mdx
+++ b/creating-campaign/membership/creatememprogram.mdx
@@ -7,30 +7,35 @@ title: 'Creating a Membership Program'
     </Step>
     <Step title="Navigate to the 'Memberships' Tab.">
         [https://portal.moongate.id/events](https://portal.moongate.id/memberships)
+        <img src="/images/creating-campaign/membership/creating program/Membership Tab Location.png"/>
     </Step>
     <Step title="Click 'Create'">
+        <img src="/images/creating-campaign/membership/creating program/Create Button Location.png"/>
     </Step>
     <Step title="Add Basic Membership Program Information">
         Enter the title of the membership program, the URL, currency used to purchase membership, and information about your brand.
+        <img src="/images/creating-campaign/membership/creating program/Basic Membership Info.webp"/>
         <Warning>
             While you can edit most of this information even after the program is activated, your program's **URL cannot be changed after activation**. Be sure to double-check it before activation.
         </Warning>
         When you are ready, scroll to the end of the page and click 'Next'.
+        <img src="/images/creating-campaign/membership/creating program/Next.gif"/>
         <Tip>
             Clicking "Next" will save your work. You can also click "Save Draft" at any point to save your work and return to it later.
         </Tip>
     </Step>
     <Step title="Add Membership Program Images, Description, and Links">
         Add a featured image, banner, and description of your membership program, as well as links to relevant social media accounts.
+        <img src="/images/creating-campaign/membership/creating program/Add Membership Details.webp"/>
         <Tabs>
             <Tab title="Featured Image">
-                
+                <img src="/images/creating-campaign/membership/creating program/Featured Image Location.webp"/>
             </Tab>
             <Tab title="Membership Program Descriptor">
-                
+                <img src="/images/creating-campaign/membership/creating program/Description Location.webp"/>
             </Tab>
             <Tab title="Socials/Website Links">
-                
+                <img src="/images/creating-campaign/membership/creating program/Social Links.webp"/>
             </Tab>
         </Tabs>
         When you are ready, scroll to the end of the page and click 'Next'. You are now ready to [implement tiering within your membership program](/creating-campaign/membership/creatememtier)!
