Fixing <info> tags

--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -23,16 +23,18 @@ title: 'Implementing Membership Tiers'
     </Step>
     <Step title="Specify Membership Tier Price">
         Enter the desired price for this membership tier.
-        <info>
+        <Info>
             Set the price to 0 if the membership tier is free to join.
-        </info>
-        <info>
+        </Info>
+        <Info>
             To change the currency type, return to "① Info" in the sidebar and change the value in the "Currency" field.
-        </info>
+        </Info>
     </Step>
     <Step title="Specify Advanced Options (Optional)">
         If applicable, specify the maximum number of available memberships within this tier, as well as whether this tier should be invisible to users on the membership information page.
-        <info>To gate membership tiers by NFT ownership or Email/Wallet addresses, please refer to [this guide](/creating-campaign/membership/gating).</info>
+        <Info>
+            To gate membership tiers by NFT ownership or Email/Wallet addresses, please refer to [this guide](/creating-campaign/membership/gating).
+        </Info>
         When you are ready, click "Save" to close the "Membership Tier" window, then click "Next."
     </Step>
     <Step title="Add Questions (Optional)">
@@ -46,9 +48,9 @@ title: 'Implementing Membership Tiers'
             Collection name and symbol cannot be changed after your event is published.
         </Warning>
         Select a blockchain to mint your membership program on, as well as a contract type.
-        <info>
+        <Info>
             For more information on selecting a blockchain and contract type, please consult section "[7. Technical Information]()."
-        </info>
+        </Info>
         Select a payment option if applicable. Moongate supports both credit cards and crypto options. Please contact us if you will be collecting payment for your event.
     </Step>
     <Step title="Publish Your Event">
