--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -3,11 +3,17 @@ title: 'Implementing Membership Tiers'
 ---
 <Steps>
     <Step title="Click '③ Tiers'">
+        <img src="/images/creating-campaign/membership/creating tier/Tier Button Location.png"/>
     </Step>
     <Step title="Click 'Add Tier'">
+        <img src="/images/creating-campaign/membership/creating tier/Add Tier Button Location.png"/>
     </Step>
     <Step title="Add Membership Tier Name/Type">
         Enter the name or tier (superfan, VIP, etc) for this membership type. Additional tiers can always be added to your membership program later.
+        <img src="/images/creating-campaign/membership/creating tier/Add Tier Name.png"/>
+        <Frame>
+            <img src="/images/creating-campaign/membership/creating tier/Tier Location.png" caption="Where customers will see the different tiers within the membership program"/>
+        </Frame>
         <Warning>
             Updates made to the "Membership Tier Name" field may not automatically appear on NFT marketplaces for NFTs that have already been minted. To ensure the latest metadata is displayed, manually refresh the NFT metadata on the respective marketplaces.
         </Warning>
